<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include
                android:id="@+id/native_ad_container"
                layout="@layout/native_ad_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/progressBarContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"  >
                <LinearLayout
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary"
                    android:orientation="vertical">
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/status_paste_download"
                        android:textSize="18sp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/progressCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
android:visibility="gone"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toBottomOf="parent">

                    <LinearLayout
                        android:id="@+id/controlsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/statusText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_download_progress"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            android:textStyle="bold" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/pauseResumeButton"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/pause"
                                app:cornerRadius="24dp" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/cancelButton"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cancel"
                                app:cornerRadius="24dp"
                                app:strokeColor="?attr/colorError" />


                        </LinearLayout>
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/urlInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_paste_link"
                    app:boxCornerRadiusBottomEnd="24dp"
                    app:boxCornerRadiusBottomStart="24dp"
                    app:boxCornerRadiusTopEnd="24dp"
                    app:boxCornerRadiusTopStart="24dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/urlInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:textSize="8sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pasteButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/button_paste"
                    android:textSize="12sp"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/ic_paste" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/formatButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/button_download"
                    android:textSize="12sp"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/ic_download" />

            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
